--- a/WebContent/cadastro/cadAtendente.xhtml
+++ b/WebContent/cadastro/cadAtendente.xhtml
@@ -18,6 +18,11 @@
 	font-weight: bold;
 }
 
+.ui-fluid .ui-password {
+    width: 100%;
+    height: 35px;
+}
+
 .ui-fluid .ui-inputmask {
 	font-size: 20px;
 	width: 100%;
@@ -74,8 +79,9 @@
 	border-radius: 15px;
 }
 
-.ui-panel .ui-panel-title {
-	
+.ui-fluid .ui-autocomplete-input {
+  	height : 35px !important;
+    width: 100%;
 }
 
 .ui-selectonebutton {
@@ -200,7 +206,7 @@
 
 									<div class="ui-g-12 ui-lg-1">
 										<h:outputLabel value="Criar Login" />
-										<p:selectOneButton rows="1" cols="30" maxlength="315"
+										<p:selectOneButton rows="1" cols="30" maxlength="315" required="true"
 											autoResize="true"
 											value="#{atendenteBean.atendenteModel.temLogin}" >
 										<f:selectItem itemLabel="Sim" itemValue="S" />
@@ -286,35 +292,35 @@
 
 		</h:form>
 
-		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true">
+		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true" closable="false">
 			<div class="ui-fluid">
 				<h:form id="formUsuario">
 					<div class="ui-g">
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-3">
 							<h:outputLabel value="Login:*" />
 							<p:inputText required="true"
 								value="#{atendenteBean.loginModel.login}" autocomplete="true"
-								requiredMessage="Informe o Nome do Usuário">
+								 requiredMessage="Informe o Nome do Usuário">
 								<p:ajax process="@this" />
 							</p:inputText>
 						</div>
 
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-3">
 							<h:outputLabel value="Senha:*" />
-							<p:password autocomplete="true" required="true"
+							<p:password autocomplete="true" required="true" 
 								value="#{atendenteBean.loginModel.senha}"
 								requiredMessage="Informe o Senha do usuário">
 								<p:ajax process="@this" />
 							</p:password>
 						</div>
 
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-6">
 							<p:outputLabel value="Perfis" />
 							<p:autoComplete completeMethod="#{auxController.completePerfil}"
 								forceSelection="true" converter="entityConverter" var="a"
 								itemLabel="#{a.perfilNome}" itemValue="#{a}"
 								value="#{atendenteBean.perfilModel}" minQueryLength="2"
-								dropdown="true" maxResults="30" required="false"
+								dropdown="true" maxResults="30" required="true"
 								requiredMessage="Informe um Perfil">
 							</p:autoComplete>
 						</div>
