--- a/WebContent/cadastro/cadEstoquista.xhtml
+++ b/WebContent/cadastro/cadEstoquista.xhtml
@@ -16,7 +16,11 @@
 	font-size: medium;
 	color: #2e6e9e;
 	font-weight: bold;
-	
+}
+
+.ui-fluid .ui-password {
+    width: 100%;
+    height: 35px;
 }
 
 .ui-fluid .ui-inputmask {
@@ -75,8 +79,9 @@
 	border-radius: 15px;
 }
 
-.ui-panel .ui-panel-title {
-	
+.ui-fluid .ui-autocomplete-input {
+  	height : 35px !important; 
+    width: 100%;
 }
 </style>
 }
@@ -196,7 +201,7 @@
 									<div class="ui-g-12 ui-lg-1">
 										<h:outputLabel value="Criar Login" />
 										<p:selectOneButton rows="1" cols="30" maxlength="315"
-											autoResize="true"
+											autoResize="true" required="true"
 											value="#{estoquistaBean.estoquistaModel.temLogin}" >
 										<f:selectItem itemLabel="Sim" itemValue="S" />
 										<f:selectItem itemLabel="Nâo" itemValue="N" />
@@ -282,11 +287,11 @@
 		</h:form>
 		
 		
-		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true">
+		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true" closable="false">
 			<div class="ui-fluid">
 				<h:form id="formUsuario">
 					<div class="ui-g">
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-3">
 							<h:outputLabel value="Login:*" />
 							<p:inputText required="true"
 								value="#{estoquistaBean.loginModel.login}" autocomplete="true"
@@ -295,7 +300,7 @@
 							</p:inputText>
 						</div>
 
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-3">
 							<h:outputLabel value="Senha:*" />
 							<p:password autocomplete="true" required="true"
 								value="#{estoquistaBean.loginModel.senha}"
@@ -304,7 +309,7 @@
 							</p:password>
 						</div>
 
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-6">
 							<p:outputLabel value="Perfis" />
 							<p:autoComplete completeMethod="#{auxController.completePerfil}"
 								forceSelection="true" converter="entityConverter" var="a"
@@ -315,12 +320,16 @@
 							</p:autoComplete>
 						</div>
 					</div>
-
-					<p:commandButton id="buttonFecharDeSenha" value="Salvar"
-						ajax="true" partialSubmit="true"
-						action="#{estoquistaBean.salvarLogin}" process="@this, @form"
-						immediate="false" update="formUsuario">
-					</p:commandButton>
+					
+					<div class="ui-g">	
+						<div align="center">
+						<p:commandButton id="buttonFecharDeSenha" value="Salvar"
+							ajax="true" partialSubmit="true" style="width: 140px"
+							action="#{estoquistaBean.salvarLogin}" process="@this, @form"
+							immediate="false" update="formUsuario">
+						</p:commandButton>
+						</div>
+					</div>
 				</h:form>
 			</div>
 		</p:dialog>
