--- a/WebContent/cadastro/cadMedico.xhtml
+++ b/WebContent/cadastro/cadMedico.xhtml
@@ -18,6 +18,10 @@
 	font-weight: bold;
 }
 
+.ui-fluid .ui-password {
+    width: 100%;
+    height: 35px;
+}
 .ui-fluid .ui-inputmask {
 	font-size: 20px;
 	width: 100%;
@@ -91,6 +95,11 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 	font-size: large;
 	text-align: center;
 	color: black;
+}
+
+.ui-fluid .ui-autocomplete-input {
+  	height : 35px !important;
+    width: 100%;
 }
 
 .ui-autocomplete-token-label {
@@ -275,7 +284,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 									</div>
 									<div class="ui-g-12 ui-lg-1">
 										<h:outputLabel value="Criar Login" />
-										<p:selectOneButton rows="1" cols="30" maxlength="315"
+										<p:selectOneButton rows="1" cols="30" maxlength="315" required="true"
 											autoResize="true"
 											value="#{medicoBean.medicoModel.temLogin}" >
 										<f:selectItem itemLabel="Sim" itemValue="S" />
@@ -350,11 +359,11 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 			</div>
 
 		</h:form>
-		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true">
+		<p:dialog id="dialogUsuario" widgetVar="dialogUsuario" header="Cadastro de Usuário" responsive="true" modal="true" closable="false">
 			<div class="ui-fluid">
 				<h:form id="formUsuario">
 					<div class="ui-g">
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-3">
 							<h:outputLabel value="Login:*" />
 							<p:inputText required="true"
 								value="#{medicoBean.loginModel.login}" autocomplete="true"
@@ -363,7 +372,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 							</p:inputText>
 						</div>
 
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-3">
 							<h:outputLabel value="Senha:*" />
 							<p:password autocomplete="true" required="true"
 								value="#{medicoBean.loginModel.senha}"
@@ -372,7 +381,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 							</p:password>
 						</div>
 
-						<div class="ui-g-12 ui-lg-2">
+						<div class="ui-g-12 ui-lg-6">
 							<p:outputLabel value="Perfis" />
 							<p:autoComplete completeMethod="#{auxController.completePerfil}"
 								forceSelection="true" converter="entityConverter" var="a"
