--- a/WebContent/cadastro/findAtendente.xhtml
+++ b/WebContent/cadastro/findAtendente.xhtml
@@ -11,7 +11,7 @@
 	<ui:define name="head">
 		<style>
 .ui-g label {
-	font-size: medium;
+	font-size: large;
 	color: black;
 	font-weight: bold
 }
@@ -22,7 +22,7 @@
 	margin: 0 16px 0 8px;
 	vertical-align: middle;
 	/*color: #2e6e9e !important;*/
-	font-size: medium;
+	font-size: large;
 }
 
 .ui-state-default, .ui-widget-content .ui-state-default,
@@ -62,20 +62,13 @@
 	color: black;
 }
 
-.ui-selectonemenu label.ui-selectonemenu-label {
-	cursor: pointer;
-	height: 33px;
-	font-size: 20px;
-	text-align: center;
-}
-
 .ui-selectoneradio label {
 	cursor: pointer;
 	display: inline-block;
 	margin: 0 16px 0 8px;
 	vertical-align: middle;
 	/*color: #2e6e9e !important;*/
-	font-size: medium;
+	font-size: large;
 }
 
 .ui-state-default, .ui-widget-content .ui-state-default,
@@ -99,7 +92,7 @@
 }
 
 .ui-panel .ui-panel-title {
-	font-size: medium;
+	font-size: large;
 }
 
 
@@ -155,7 +148,7 @@
 										<f:selectItem itemLabel="Todos" itemValue="T" />
 										<f:selectItem itemLabel="Ativo" itemValue="A" />
 										<f:selectItem itemLabel="Inativo" itemValue="I" />
-										<p:ajax event="change" listener="#{atendenteBean.busca}" update="table" />
+										<p:ajax event="change" listener="#{atendenteBean.busca}" update="table @form" />
 									</p:selectOneRadio>
 								</div>
 							</h:panelGroup>
@@ -169,12 +162,12 @@
 
 							<div class="ui-g-12 ui-lg-2 ">
 								<div class="ui-inputgroup">
-									<p:inputText value="#{atendenteBean.campoBuscaCPF}"
+									<p:inputText value="#{atendenteBean.campoBuscaCPF}"  type="number"
 										placeholder="Buscar pelo CPF" id="inputCPF"
 										style="height:40px; " />
 									<p:commandButton style="height:40px;" icon="ui-icon-search"
 										id="btnBuscatxt" actionListener="#{atendenteBean.busca}"
-										update=" inputNome,inputCPF,table" />
+										update=" inputNome inputCPF table @form" />
 								</div>
 							</div>
 								<div class="ui-g-12 ui-lg-1">
